:recycle: [Refactor]: flatMap 변경